# anthea2

./: Cargo.toml  README.md  credits.txt
.cargo/: config.toml
assets/: anthea_tileset.tsx  castle1.tmx
src/: base.rs  main.rs  menu.rs  setup.rs  tiled.rs  ui.rs  world.rs
src/stages/: castle.rs  mod.rs
